--- a/Day 1/index.html
+++ b/Day 1/index.html
@@ -1,11 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    Hi, my name is Hashir.
+    <ol>
+        <li>Apple</li>
+        <li>Banana</li>
+        <li>Orange</li>
+        <li>Watermelon</li>
+    </ol>
+    <ul>
+        <li>Apple</li>
+        <li>Banana</li>
+        <li>Orange</li>
+        <li>Watermelon</li>
+    </ul>
+
+    <table border="1">
+        <tr>
+            <th rowspan="3">Day</th>
+            <th colspan="3">Seminar</th>
+        </tr><br>
+        <tr>
+            <th colspan="2">Schedule</th>
+            <th rowspan="2">Topic</th>
+        </tr>
+        <tr>
+            <th>Begin</th>
+            <th>End</th>
+        </tr>
+        <tr>
+            <td rowspan="2">Monday</td>
+            <td rowspan="2" bgcolor="Orange">8:00 am</td>
+            <td rowspan="2" bgcolor="blue">5:00 pm</td>
+            <td>Introduction to Xml</td>
+        </tr>
+        <tr>
+            <td>Validity: DTD and Relax NG</td>
+        </tr>
+        <tr>
+            <td rowspan="3">Tuesday</td>
+            <td bgcolor="Orange">8:00 am</td>
+            <td bgcolor="Orange">5:00 pm</td>
+            <td>XPath</td>
+        </tr>
+        <tr>
+            <td bgcolor="Orange">11:00 am</td>
+            <td bgcolor="green">2:00 pm</td>
+            <td rowspan="2">XSL Transformation</td>
+        </tr>
+        <tr>
+            <td bgcolor="green">2:00 pm</td>
+            <td bgcolor="blue">5:00 pm</td>
+        </tr>
+        <tr>
+            <td>Wednesday</td>
+            <td bgcolor="Orange">8:00 am</td>
+            <td bgcolor="green">12:00 pm</td>
+            <td>XSL Formatting Objects</td>
+        </tr>
+    </table>
+
+    
+
 </body>
+
 </html>
