--- a/Day 2/index.html
+++ b/Day 2/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css"><!--External CSS-->
+    <!--Internal CSS-->
+    <style>
+        h1{
+            color: red;
+        }
+        p{
+            color: blue;
+        }
+    </style>
 </head>
 <body>
-    ddd
+    <!--Inline CSS-->
+    <h1 style="background-color: black;">Name</h1>
+    <p style="background-color: yellow;">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, molestiae!</p>
 </body>
 </html>
